# tauri-room-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: booking.rs  main.rs  state.rs  utils.rs
src/components/Calendar/: Calendar.css  Calendar.jsx
src/components/DbManage/: DbManage.jsx
src/components/Loading/: Loading.css  Loading.jsx
src/components/Navbar/: Navbar.css  Navbar.jsx
src/components/Table/: Table.css  Table.jsx
src/pages/DbSetup/: DbSetup.jsx
src/pages/Home/: Home.jsx
src/pages/Reservations/: Reservations.jsx
src/pages/Verify/: Verify.css  Verify.jsx
