[package]
name = "tauri-room-manager"
version = "0.0.0"
description = "Rust-based desktop application powered by Tauri, designed to efficiently manage bookings for rooms, providing a comprehensive solution for room management."
authors = ["pathetic"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["default"] }
serde_with = "2.1.0"
tokio = { version = "1.22", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
sodiumoxide = "0.2.7"
argon2 = "0.4.1"
anyhow = "1.0.65"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
zeroize = { version = "1.5.7", features = ["derive"] }
lazy_static = "1.4.0"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", rev = "eb0d500f70136b87eddc6531d7355682f85b2560", version = "0.1.0" }
sha2 = "0.10.6"
once_cell = "1.16.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
